# poly

./: .env.example  .gitignore  CHANGELOG_API_FLAGS.md  DEFAULTS_UPDATED.md  FINAL_COMPLETE_SUMMARY.md  FINAL_FIX_SUMMARY.md  FINAL_SUMMARY.md  FIX_SUMMARY.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_COMPLETE.txt  IMPLEMENTATION_SUMMARY.md  MONITORING_COMPLETE.md  OPTIMIZATION_SUMMARY.md  OPTIMIZATION_SUMMARY_V3.txt  OPTIMIZATION_SUMMARY_VOLUME_SCANNING.md  OPTIMIZATION_V3_COMPLETE.md  PHASE_2_3_CONFIRMATION.md  PRODUCTION_READY.md  QUICK_START_FLAGS.md  README.md  README_API_FLAGS.md  README_OPTIMIZATIONS.md  REALTIME_MONITORING.md  SECURITY.md  UNIFIED_SYSTEM_README.md  USAGE_EXAMPLES.md  UV_SETUP_GUIDE.md  discover_channels.py  explore_discord.py  full_test.py  implementation_plan.md  pyproject.toml  quick_test.py  test_async_benchmark.py  test_batch_api.py  test_debug_batch.py  test_discord_notification.py  test_final_comparison.py  test_graphql_batch.py  test_quick_perf.py  (+2 more)
.hive/: issues.jsonl
docs/: API_REFERENCE.md  ARCHITECTURE.md  CATEGORICAL_FEATURES.md  IAX_FORMULA.md  SERVER_SIDE_OPTIMIZATION.md  VOLUME_ANOMALY_DETECTION.md
examples/: optimized_scoring_demo.py  quick_start.py
experiment/: collector.py  features.py  train.py
src/poly/: __init__.py  cli.py  cli_optimized.py  unified_insider_detector.py
src/poly/api/: __init__.py  async_client.py  graphql.py  optimized_client.py  polygon_rpc.py  polygonscan.py  polymarket.py  websocket_client.py
src/poly/cache/: __init__.py  profile_cache.py  redis_cache.py
src/poly/collection/: __init__.py  analyzer.py  collector.py  jump_collector.py
src/poly/discord/: bot.py  webhook.py
src/poly/docs/: IAX_FORMULA.md  PERPETUAL_API_DOCS.md  README.md
src/poly/intelligence/: analyzer.py  clustering.py  optimized_scorer.py  prioritization.py  scorer.py  scout.py  utils.py
src/poly/intelligence/models/: alpha_scaler_v1.pkl  main_scaler.pkl
src/poly/monitoring/: __init__.py  market_volume_monitor.py  position_monitor.py  trade_monitor.py
src/poly/research/: PERPETUAL_ML_MODEL_RESEARCH.md
src/poly/utils/: __init__.py  logging.py
training_data/: collect_training_data.py  train.py
