[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "poly"
version = "0.2.0"
description = "Polymarket ML Pipeline - Insider Detection with IAX"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.25.0",
  "pandas>=2.0.0",
  "numpy>=1.24.0",
  "numba>=0.58.0",
  "perpetual>=1.0.0",
  "pyarrow>=12.0.0",
  "fastparquet>=2023.4.0",
  "polars>=0.20.0",
  "openai>=1.0.0",
  "duckduckgo_search>=5.0.0",
  "websockets>=12.0",
  "rich>=13.0",
  "matplotlib>=3.7.0",
  "web3>=7.14.1",
  "msgpack>=1.1.2",
  "scipy>=1.10.0",
  "python-dotenv>=1.0.0",
]

[project.scripts]
poly = "poly.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/poly"]

[dependency-groups]
dev = ["pytest>=7.0.0"]
